--- a/index.html
+++ b/index.html
@@ -7,3 +7,99 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oh my food</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <!--header-->
+    <header>
+        <div class="logo">
+            <img src="images/logo/ohmyfood.png" alt="logo">
+        </div>
+        <!--Partie localisation-->
+        <i class="fas fa-map-marker-alt"></i>
+        <p>Paris, Belleville</p>
+    </header>
+    <main>
+        <!--section-->
+        <section>
+            <h1>Réservez le menu qui vous convient</h1>
+            <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+        </section>
+        <!--boutton-->
+        <button class="button">Explorer nos restaurants</button>
+
+        <h2>Fonctionnement</h2>
+        <nav>
+            <div class="choix">
+                Choisissez un restaurant
+            </div>
+            <div class="menu">
+                Composez votre menu
+            </div>
+            <div class="degustez">
+                Dégustez au restaurant
+            </div>
+        </nav>
+        <section>
+            <div class="bloc-restaurants">
+                <h2>Restaurants</h2>
+
+                <a href="#" class="bloc-link">
+                    <figure>
+                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="menilmontant">
+                        <figcaption>
+                            <h3>La palette du goût</h3>
+                            <p>Ménilmontant</p>
+                        </figcaption>
+                        <div class="new">Nouveau</div>
+                    </figure>
+                </a>
+
+                <a href="#" class="bloc-link">
+                    <figure>
+                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="menilmontant">
+                        <figcaption>
+                            <h3>La palette du goût</h3>
+                            <p>Ménilmontant</p>
+                        </figcaption>
+                        <div class="new">Nouveau</div>
+                    </figure>
+                </a>
+                <a href="#" class="bloc-link">
+                    <figure>
+                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="menilmontant">
+                        <figcaption>
+                            <h3>La palette du goût</h3>
+                            <p>Ménilmontant</p>
+                        </figcaption>
+                    </figure>
+                </a>
+                <a href="#" class="bloc-link">
+                    <figure>
+                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                            alt="menilmontant">
+                        <figcaption>
+                            <h3>La palette du goût</h3>
+                            <p>Ménilmontant</p>
+                        </figcaption>
+                    </figure>
+                </a>
+            </div>
+        </section>
+        <footer>
+            <div class="logo2"><img src="images/logo/ohmyfood@2x.svg" alt="logo ohmyfood"></div>
+            <a href="#">Proposer un restaurant</a>
+            <a href="#">Devenir Partenaire</a>
+            <a href="#">Mentions légales</a>
+            <a href="mailto:contact@ohmyfood.com">Contact</a>
+            </div>
+        </footer>
+
+
+
+
+    </main>
+</body>
