--- a/index.html
+++ b/index.html
@@ -19,78 +19,81 @@
             <img src="images/logo/ohmyfood.png" alt="logo">
         </div>
         <!--Partie localisation-->
-        <i class="fas fa-map-marker-alt"></i>
-        <p>Paris, Belleville</p>
+        <div class="localisation">
+            <p>Paris, Belleville</p>
+        </div>
     </header>
     <main>
         <!--section-->
-        <section>
-            <h1>Réservez le menu qui vous convient</h1>
-            <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-        </section>
-        <!--boutton-->
-        <button class="button">Explorer nos restaurants</button>
-
+        <div class="background">
+            <section>
+                <h1>Réservez le menu qui vous convient</h1>
+                <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+            </section>
+            <!--boutton-->
+            <button class="button">Explorer nos restaurants</button>
+        </div>
         <h2>Fonctionnement</h2>
         <nav>
             <div class="choix">
-                Choisissez un restaurant
+                <p>Choisissez un restaurant</p>
             </div>
             <div class="menu">
-                Composez votre menu
+                <p>Composez votre menu</p>
             </div>
             <div class="degustez">
-                Dégustez au restaurant
+                <p>Dégustez au restaurant</p>
             </div>
         </nav>
         <section>
             <div class="bloc-restaurants">
                 <h2>Restaurants</h2>
+                <div class="resto">
+                    <a href="#" class="bloc-link">
+                        <figure>
+                            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="menilmontant">
+                            <figcaption>
+                                <h3>La palette du goût</h3>
+                                <p>Ménilmontant</p>
+                            </figcaption>
+                            <div class="new">Nouveau</div>
+                        </figure>
+                    </a>
 
-                <a href="#" class="bloc-link">
-                    <figure>
-                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="menilmontant">
-                        <figcaption>
-                            <h3>La palette du goût</h3>
-                            <p>Ménilmontant</p>
-                        </figcaption>
-                        <div class="new">Nouveau</div>
-                    </figure>
-                </a>
-
-                <a href="#" class="bloc-link">
-                    <figure>
-                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="menilmontant">
-                        <figcaption>
-                            <h3>La palette du goût</h3>
-                            <p>Ménilmontant</p>
-                        </figcaption>
-                        <div class="new">Nouveau</div>
-                    </figure>
-                </a>
-                <a href="#" class="bloc-link">
-                    <figure>
-                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="menilmontant">
-                        <figcaption>
-                            <h3>La palette du goût</h3>
-                            <p>Ménilmontant</p>
-                        </figcaption>
-                    </figure>
-                </a>
-                <a href="#" class="bloc-link">
-                    <figure>
-                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                            alt="menilmontant">
-                        <figcaption>
-                            <h3>La palette du goût</h3>
-                            <p>Ménilmontant</p>
-                        </figcaption>
-                    </figure>
-                </a>
+                    <a href="#" class="bloc-link">
+                        <figure>
+                            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="menilmontant">
+                            <figcaption>
+                                <h3>La palette du goût</h3>
+                                <p>Ménilmontant</p>
+                            </figcaption>
+                            <div class="new">Nouveau</div>
+                        </figure>
+                    </a>
+                    <a href="#" class="bloc-link">
+                        <figure>
+                            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="menilmontant">
+                            <figcaption>
+                                <h3>La palette du goût</h3>
+                                <p>Ménilmontant</p>
+                            </figcaption>
+                        </figure>
+                    </a>
+                    <a href="#" class="bloc-link">
+                        <figure>
+                            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                                alt="menilmontant">
+                            <figcaption>
+                                <h3>La palette du goût</h3>
+                                <p>Ménilmontant</p>
+                            </figcaption>
+                        </figure>
+                    </a>
+                </div>
             </div>
         </section>
         <footer>
-            <div class="logo2"><img src="images/logo/ohmyfood@2x.svg" alt="logo ohmyfood"></div>
+            <div class="logo2"><p>ohmyfood</p></div>
             <a href="#">Proposer un restaurant</a>
             <a href="#">Devenir Partenaire</a>
             <a href="#">Mentions légales</a>
