--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oh my food</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/3f6c1d8c3a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <!--header-->
     <header>
         <div class="logo">
-            <img src="images/logo/ohmyfood.png" alt="logo">
+            <img src="images/logo/ohmyfood.png" alt="logo" style="width: 300px;">
         </div>
         <!--Partie localisation-->
         <div class="localisation">
+            <i class="fas fa-map-marker-alt"></i>
             <p>Paris, Belleville</p>
         </div>
     </header>
@@ -31,61 +31,77 @@
                 <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
             </section>
             <!--boutton-->
-            <button class="button">Explorer nos restaurants</button>
+            <button class="button" style="width:270px;height:50px;font-size: 1.1em;">Explorer nos restaurants</button>
         </div>
         <h2>Fonctionnement</h2>
         <nav>
-            <div class="choix">
-                <p>Choisissez un restaurant</p>
+            <div class="choise">
+                <div class="number">1</div>
+                <div class="choix">
+                    <i class="fas fa-mobile-alt"></i>
+                    <p>Choisissez un restaurant</p>
+                </div>
             </div>
-            <div class="menu">
-                <p>Composez votre menu</p>
+            <div class="choise">
+                <div class="number">2</div>
+                <div class="menu">
+                    <i class="fas fa-list"></i>
+                    <p>Composez votre menu</p>
+                </div>
             </div>
-            <div class="degustez">
-                <p>Dégustez au restaurant</p>
+            <div class="choise">
+                <div class="number">3</div>
+                <div class="degustez">
+                    <i class="fas fa-store"></i>
+                    <p>Dégustez au restaurant</p>
+                </div>
             </div>
         </nav>
         <section>
             <div class="bloc-restaurants">
                 <h2>Restaurants</h2>
                 <div class="resto">
-                    <a href="#" class="bloc-link">
+                    <a href="palette.html" class="bloc-link">
                         <figure>
                             <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="menilmontant">
                             <figcaption>
                                 <h3>La palette du goût</h3>
                                 <p>Ménilmontant</p>
+                                <i class="far fa-heart"></i>
                             </figcaption>
-                            <div class="new">Nouveau</div>
                         </figure>
+                        <div class="new">Nouveau</div>
                     </a>
 
-                    <a href="#" class="bloc-link">
+                    <a href="note.html" class="bloc-link">
                         <figure>
-                            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="menilmontant">
+                            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="charonne">
                             <figcaption>
-                                <h3>La palette du goût</h3>
-                                <p>Ménilmontant</p>
-                            </figcaption>
-                            <div class="new">Nouveau</div>
-                        </figure>
-                    </a>
-                    <a href="#" class="bloc-link">
-                        <figure>
-                            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="menilmontant">
-                            <figcaption>
-                                <h3>La palette du goût</h3>
-                                <p>Ménilmontant</p>
+                                <h3>La note enchantée</h3>
+                                <p>Charonne</p>
+                                <i class="far fa-heart"></i>
                             </figcaption>
                         </figure>
+                        <div class="new">Nouveau</div>
                     </a>
-                    <a href="#" class="bloc-link">
+                    <a href="francaise.html" class="bloc-link">
+                        <figure>
+                            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="cite">
+                            <figcaption>
+                                <h3>A la française</h3>
+                                <p>Cité Rouge</p>
+                                <i class="far fa-heart"></i>
+                            </figcaption>
+                        </figure>
+                    </a>
+                    <a href="delice.html" class="bloc-link">
                         <figure>
                             <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                                alt="menilmontant">
+                                alt="folie">
                             <figcaption>
-                                <h3>La palette du goût</h3>
-                                <p>Ménilmontant</p>
+                                <h3>Le délice des sens</h3>
+                                <p>Folie-Méricourt</p>
+                                <i class="far fa-heart"></i>
                             </figcaption>
                         </figure>
                     </a>
@@ -93,11 +109,21 @@
             </div>
         </section>
         <footer>
-            <div class="logo2"><p>ohmyfood</p></div>
-            <a href="#">Proposer un restaurant</a>
-            <a href="#">Devenir Partenaire</a>
-            <a href="#">Mentions légales</a>
-            <a href="mailto:contact@ohmyfood.com">Contact</a>
+            <div class="logo2">
+                <p>ohmyfood</p>
+            </div>
+            <a href="#"><i class="fas fa-utensils"></i>
+                <p>Proposer un restaurant</p>
+            </a>
+            <a href="#"><i class="fas fa-hands-helping"></i>
+                <p>Devenir Partenaire</p>
+            </a>
+            <a href="#">
+                <p>Mentions légales</p>
+            </a>
+            <a href="mailto:contact@ohmyfood.com">
+                <p>Contact</p>
+            </a>
             </div>
         </footer>
 
