--- a/delice.html
+++ b/delice.html
@@ -37,7 +37,7 @@
         <section>
             <div class="entrees">
                 <p>ENTRÉES</p>
-                <a href="#">
+                <a href="#"class="bloc-link">
                     <div class="choise">
                         <div class="choix">
                             <h2>Tartare de thon</h2>
@@ -45,14 +45,14 @@
                             <div class="prix">25€</div>
                         </div>
                 </a>
-                <a href="#">
+                <a href="#"class="bloc-link">
                     <div class="choix2">
                         <h2>Bouchée de homard croustillant</h2>
                         <p>Et sa farandole de petits légumes</p>
                         <div class="prix">35€</div>
                     </div>
                 </a>
-                <a href="#">
+                <a href="#"class="bloc-link">
                     <div class="choix3">
                         <h2>Velouté de cèpes</h2>
                         <p>Aux truffes</p>
@@ -66,7 +66,7 @@
     <section>
         <div class="plats">
             <p>PLATS</p>
-            <a href="#">
+            <a href="#"class="bloc-link">
                 <div class="choise">
                     <div class="choix">
                         <h2>Poulet rôti aux herbes de Provence</h2>
@@ -74,14 +74,14 @@
                         <div class="prix">40€</div>
                     </div>
             </a>
-            <a href="#">
+            <a href="#"class="bloc-link">
                 <div class="choix2">
                     <h2>Langouste rôtie</h2>
                     <p>Et ses légumes de saison</p>
                     <div class="prix">35€</div>
                 </div>
             </a>
-            <a href="#">
+            <a href="#"class="bloc-link">
                 <div class="choix3">
                     <h2>Côte de boeuf Angus</h2>
                     <p>Et sa purée de panais</p>
@@ -95,7 +95,7 @@
     <section>
         <div class="desserts">
             <p>DESSERTS</p>
-            <a href="#">
+            <a href="#"class="bloc-link">
                 <div class="choise">
                     <div class="choix">
                         <h2>Farandole de desserts</h2>
@@ -103,14 +103,14 @@
                         <div class="prix">18€</div>
                     </div>
             </a>
-            <a href="#">
+            <a href="#"class="bloc-link">
                 <div class="choix2">
                     <h2>Crème brulée</h2>
                     <p>Revisitée</p>
                     <div class="prix">22€</div>
                 </div>
             </a>
-            <a href="#">
+            <a href="#"class="bloc-link">
                 <div class="choix3">
                     <h2>Tiramisu</h2>
                     <p>À la noisette</p>
