--- a/note.html
+++ b/note.html
@@ -37,32 +37,40 @@
         <section>
             <div class="entrees">
                 <p>ENTRÉES</p>
-                <a href="#">
+                <a href="#" class="bloc-link2">
                     <div class="choise">
                         <div class="choix">
-                            <h2>Ravioles de foie gras</h2>
-                            <p>Accompagnés de leur crème à la truffe</p>
+                            <figcaption>
+                                <h2>Ravioles de foie gras</h2>
+                                <p>Accompagnés de leur crème à la truffe</p>
+                            </figcaption>
                             <div class="prix">25€</div>
                         </div>
                 </a>
-                <a href="#">
+                <a href="#" class="bloc-link2">
                     <div class="choix2">
-                        <h2>Caviar osciètre</h2>
-                        <p>Sur blini à la farine de blé noir</p>
+                        <figcaption>
+                            <h2>Caviar osciètre</h2>
+                            <p>Sur blini à la farine de blé noir</p>
+                        </figcaption>
                         <div class="prix">35€</div>
                     </div>
                 </a>
-                <a href="#">
+                <a href="#" class="bloc-link2">
                     <div class="choix3">
-                        <h2>Homard et espuma de potiron</h2>
-                        <p>Mariné aux zestes d'orange</p>
+                        <figcaption>
+                            <h2>Homard et espuma de potiron</h2>
+                            <p>Mariné aux zestes d'orange</p>
+                        </figcaption>
                         <div class="prix">20€</div>
                     </div>
                 </a>
-                <a href="#">
+                <a href="#" class="bloc-link2">
                     <div class="choix4">
-                        <h2>Foie gras de canard cuit entier</h2>
-                        <p>MConfiture de figue et pain toasté</p>
+                        <figcaption>
+                            <h2>Foie gras de canard cuit entier</h2>
+                            <p>Confiture de figue et pain toasté</p>
+                        </figcaption>
                         <div class="prix">35€</div>
                     </div>
                 </a>
@@ -73,25 +81,31 @@
     <section>
         <div class="plats">
             <p>PLATS</p>
-            <a href="#">
+            <a href="#" class="bloc-link">
                 <div class="choise">
                     <div class="choix">
-                        <h2>FNoix de coquille Saint-Jacques</h2>
-                        <p>Sur lit de purée de céleri-rave</p>
+                        <figcaption>
+                            <h2>Noix de coquille Saint-Jacques</h2>
+                            <p>Sur lit de purée de céleri-rave</p>
+                        </figcaption>
                         <div class="prix">40€</div>
                     </div>
             </a>
-            <a href="#">
+            <a href="#" class="bloc-link">
                 <div class="choix2">
-                    <h2>Langoustine poêlée</h2>
-                    <p>Purée de patate douce</p>
+                    <figcaption>
+                        <h2>Langoustine poêlée</h2>
+                        <p>Purée de patate douce</p>
+                    </figcaption>
                     <div class="prix">35€</div>
                 </div>
             </a>
-            <a href="#">
+            <a href="#" class="bloc-link">
                 <div class="choix3">
-                    <h2>Mijoté de queue de boeuf</h2>
-                    <p>Et riz sauvage aux zestes de citron</p>
+                    <figcaption>
+                        <h2>Mijoté de queue de boeuf</h2>
+                        <p>Et riz sauvage aux zestes de citron</p>
+                    </figcaption>
                     <div class="prix">44€</div>
                 </div>
             </a>
@@ -102,25 +116,31 @@
     <section>
         <div class="desserts">
             <p>DESSERTS</p>
-            <a href="#">
+            <a href="#" class="bloc-link">
                 <div class="choise">
                     <div class="choix">
-                        <h2>Macaron de noisette et chocolat</h2>
-                        <p>Glace au caramel brun et sel de Guérande</p>
+                        <figcaption>
+                            <h2>Macaron de noisette et chocolat</h2>
+                            <p>Glace au caramel brun et sel de Guérande</p>
+                        </figcaption>
                         <div class="prix">18€</div>
                     </div>
             </a>
-            <a href="#">
+            <a href="#" class="bloc-link">
                 <div class="choix2">
-                    <h2>Baba au rhum revisité</h2>
-                    <p>Avec son coulis de citron</p>
+                    <figcaption>
+                        <h2>Baba au rhum revisité</h2>
+                        <p>Avec son coulis de citron</p>
+                    </figcaption>
                     <div class="prix">22€</div>
                 </div>
             </a>
-            <a href="#">
+            <a href="#" class="bloc-link">
                 <div class="choix3">
-                    <h2>Tarte au citron meringuée</h2>
-                    <p>Déstructurée</p>
+                    <figcaption>
+                        <h2>Tarte au citron meringuée</h2>
+                        <p>Déstructurée</p>
+                    </figcaption>
                     <div class="prix">23€</div>
                 </div>
             </a>
