--- a/francaise.html
+++ b/francaise.html
@@ -37,7 +37,7 @@
         <section>
             <div class="entrees">
                 <p>ENTRÉES</p>
-                <a href="#">
+                <a href="#"class="bloc-link">
                     <div class="choise">
                         <div class="choix">
                             <h2>Tartare de poulpe acidulé</h2>
@@ -45,14 +45,14 @@
                             <div class="prix">25€</div>
                         </div>
                 </a>
-                <a href="#">
+                <a href="#"class="bloc-link">
                     <div class="choix2">
                         <h2>Velouté de légumes d'antan</h2>
                         <p>Carotte, panais, topinambour</p>
                         <div class="prix">35€</div>
                     </div>
                 </a>
-                <a href="#">
+                <a href="#"class="bloc-link">
                     <div class="choix3">
                         <h2>Soupe à l'oignon</h2>
                         <p>Revisitée</p>
@@ -66,7 +66,7 @@
     <section>
         <div class="plats">
             <p>PLATS</p>
-            <a href="#">
+            <a href="#"class="bloc-link">
                 <div class="choise">
                     <div class="choix">
                         <h2>Coquilles Saint-Jacques</h2>
@@ -74,14 +74,14 @@
                         <div class="prix">40€</div>
                     </div>
             </a>
-            <a href="#">
+            <a href="#"class="bloc-link">
                 <div class="choix2">
                     <h2>Magret de canard</h2>
                     <p>Et parmentier de pommes de terre</p>
                     <div class="prix">35€</div>
                 </div>
             </a>
-            <a href="#">
+            <a href="#"class="bloc-link">
                 <div class="choix3">
                     <h2>Pigeonneau d’Ille-et-Vilaine</h2>
                     <p>Sur son lit de gnocchis aux légumes</p>
@@ -95,7 +95,7 @@
     <section>
         <div class="desserts">
             <p>DESSERTS</p>
-            <a href="#">
+            <a href="#"class="bloc-link">
                 <div class="choise">
                     <div class="choix">
                         <h2>Pétales de violettes glacés</h2>
@@ -103,14 +103,14 @@
                         <div class="prix">18€</div>
                     </div>
             </a>
-            <a href="#">
+            <a href="#"class="bloc-link">
                 <div class="choix2">
                     <h2>Fondant au chocolat</h2>
                     <p>Revisité</p>
                     <div class="prix">22€</div>
                 </div>
             </a>
-            <a href="#">
+            <a href="#"class="bloc-link">
                 <div class="choix3">
                     <h2>Millefeuille croustillant</h2>
                     <p>Myrtilles et pâte d’amande</p>
