--- a/palette.html
+++ b/palette.html
@@ -37,7 +37,7 @@
         <section>
             <div class="entrees">
                 <p>ENTRÉES</p>
-                <a href="#">
+                <a href="#"class="bloc-link">
                     <div class="choise">
                         <div class="choix">
                             <h2>Fricassée d'escargot</h2>
@@ -45,14 +45,14 @@
                             <div class="prix">25€</div>
                         </div>
                 </a>
-                <a href="#">
+                <a href="#"class="bloc-link">
                     <div class="choix2">
                         <h2>Foie gras de canard mi-cuit</h2>
                         <p>Et ses copeaux de truffe noire</p>
                         <div class="prix">35€</div>
                     </div>
                 </a>
-                <a href="#">
+                <a href="#"class="bloc-link">
                     <div class="choix3">
                         <h2>Oeuf au plat</h2>
                         <p>Assaisonné à la truffe sur lit de caviar</p>
@@ -66,7 +66,7 @@
     <section>
         <div class="plats">
             <p>PLATS</p>
-            <a href="#">
+            <a href="#"class="bloc-link">
                 <div class="choise">
                     <div class="choix">
                         <h2>Filet de boeuf aux herbes</h2>
@@ -74,14 +74,14 @@
                         <div class="prix">40€</div>
                     </div>
             </a>
-            <a href="#">
+            <a href="#"class="bloc-link">
                 <div class="choix2">
                     <h2>Parmentier de queue de boeuf</h2>
                     <p>À la truffe noire sur sa purée de panais</p>
                     <div class="prix">35€</div>
                 </div>
             </a>
-            <a href="#">
+            <a href="#"class="bloc-link">
                 <div class="choix3">
                     <h2>Filet de turbot</h2>
                     <p>Aux agrumes</p>
@@ -95,7 +95,7 @@
     <section>
         <div class="desserts">
             <p>DESSERTS</p>
-            <a href="#">
+            <a href="#"class="bloc-link">
                 <div class="choise">
                     <div class="choix">
                         <h2>Paris-Brest</h2>
@@ -103,14 +103,14 @@
                         <div class="prix">18€</div>
                     </div>
             </a>
-            <a href="#">
+            <a href="#"class="bloc-link">
                 <div class="choix2">
                     <h2>Macaron au chocolat d'exception</h2>
                     <p>Et glace à la vanille de Madagascar</p>
                     <div class="prix">22€</div>
                 </div>
             </a>
-            <a href="#">
+            <a href="#"class="bloc-link">
                 <div class="choix3">
                     <h2>Mousse au chocolat</h2>
                     <p>Au piment d'Espelette et à la truffe noire</p>
