--- a/delice.html
+++ b/delice.html
@@ -27,36 +27,78 @@
             <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="menilmontant">
         </div>
     </header>
-    <div class="grey">
-        <section>
-            <div class="title">
-                <h1>Le délice des sens</h1>
-                <i class="far fa-heart"></i>
-            </div>
+    <div class="position">
+        <div class="grey">
+            <section>
+                <div class="title">
+                    <h1>Le délice des sens</h1>
+                    <i class="far fa-heart"></i>
+                </div>
+            </section>
+            <section>
+                <div class="entrees">
+                    <p>ENTRÉES</p>
+                    <a href="#" class="bloc-link">
+                        <div class="choise">
+                            <div class="choix">
+                                <div class="text">
+                                    <h2>Tartare de thon</h2>
+                                    <p>Assaisonné au yuzu</p>
+                                </div>
+                                <div class="prix">25€</div>
+                            </div>
+                    </a>
+                    <a href="#" class="bloc-link">
+                        <div class="choix2">
+                            <div class="text">
+                                <h2>Bouchée de homard croustillant</h2>
+                                <p>Et sa farandole de petits légumes</p>
+                            </div>
+                            <div class="prix">35€</div>
+                        </div>
+                    </a>
+                    <a href="#" class="bloc-link">
+                        <div class="choix3">
+                            <div class="text">
+                                <h2>Velouté de cèpes</h2>
+                                <p>Aux truffes</p>
+                            </div>
+                            <div class="prix">20€</div>
+                        </div>
+                    </a>
+                </div>
+        </div>
         </section>
+
         <section>
-            <div class="entrees">
-                <p>ENTRÉES</p>
-                <a href="#"class="bloc-link">
+            <div class="plats">
+                <p>PLATS</p>
+                <a href="#" class="bloc-link">
                     <div class="choise">
                         <div class="choix">
-                            <h2>Tartare de thon</h2>
-                            <p>Assaisonné au yuzu</p>
-                            <div class="prix">25€</div>
+                            <div class="text">
+                                <h2>Poulet rôti aux herbes de Provence</h2>
+                                <p>Et sa crème de truffe</p>
+                            </div>
+                            <div class="prix">40€</div>
                         </div>
                 </a>
-                <a href="#"class="bloc-link">
+                <a href="#" class="bloc-link">
                     <div class="choix2">
-                        <h2>Bouchée de homard croustillant</h2>
-                        <p>Et sa farandole de petits légumes</p>
+                        <div class="text">
+                            <h2>Langouste rôtie</h2>
+                            <p>Et ses légumes de saison</p>
+                        </div>
                         <div class="prix">35€</div>
                     </div>
                 </a>
-                <a href="#"class="bloc-link">
+                <a href="#" class="bloc-link">
                     <div class="choix3">
-                        <h2>Velouté de cèpes</h2>
-                        <p>Aux truffes</p>
-                        <div class="prix">20€</div>
+                        <div class="text">
+                            <h2>Côte de boeuf Angus</h2>
+                            <p>Et sa purée de panais</p>
+                        </div>
+                        <div class="prix">44€</div>
                     </div>
                 </a>
             </div>
@@ -64,56 +106,33 @@
     </section>
 
     <section>
-        <div class="plats">
-            <p>PLATS</p>
-            <a href="#"class="bloc-link">
-                <div class="choise">
-                    <div class="choix">
-                        <h2>Poulet rôti aux herbes de Provence</h2>
-                        <p>Et sa crème de truffe</p>
-                        <div class="prix">40€</div>
-                    </div>
-            </a>
-            <a href="#"class="bloc-link">
-                <div class="choix2">
-                    <h2>Langouste rôtie</h2>
-                    <p>Et ses légumes de saison</p>
-                    <div class="prix">35€</div>
-                </div>
-            </a>
-            <a href="#"class="bloc-link">
-                <div class="choix3">
-                    <h2>Côte de boeuf Angus</h2>
-                    <p>Et sa purée de panais</p>
-                    <div class="prix">44€</div>
-                </div>
-            </a>
-        </div>
-        </div>
-    </section>
-
-    <section>
         <div class="desserts">
             <p>DESSERTS</p>
-            <a href="#"class="bloc-link">
+            <a href="#" class="bloc-link">
                 <div class="choise">
                     <div class="choix">
-                        <h2>Farandole de desserts</h2>
-                        <p>Du chef</p>
+                        <div class="text">
+                            <h2>Farandole de desserts</h2>
+                            <p>Du chef</p>
+                        </div>
                         <div class="prix">18€</div>
                     </div>
             </a>
-            <a href="#"class="bloc-link">
+            <a href="#" class="bloc-link">
                 <div class="choix2">
-                    <h2>Crème brulée</h2>
-                    <p>Revisitée</p>
+                    <div class="text">
+                        <h2>Crème brulée</h2>
+                        <p>Revisitée</p>
+                    </div>
                     <div class="prix">22€</div>
                 </div>
             </a>
-            <a href="#"class="bloc-link">
+            <a href="#" class="bloc-link">
                 <div class="choix3">
-                    <h2>Tiramisu</h2>
-                    <p>À la noisette</p>
+                    <div class="text">
+                        <h2>Tiramisu</h2>
+                        <p>À la noisette</p>
+                    </div>
                     <div class="prix">23€</div>
                 </div>
             </a>
@@ -143,4 +162,5 @@
         </a>
         </div>
     </footer>
+    </div>
 </body>
