--- a/francaise.html
+++ b/francaise.html
@@ -27,36 +27,78 @@
             <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="menilmontant">
         </div>
     </header>
-    <div class="grey">
-        <section>
-            <div class="title">
-                <h1>À la française</h1>
-                <i class="far fa-heart"></i>
-            </div>
+    <div class="position">
+        <div class="grey">
+            <section>
+                <div class="title">
+                    <h1>À la française</h1>
+                    <i class="far fa-heart"></i>
+                </div>
+            </section>
+            <section>
+                <div class="entrees">
+                    <p>ENTRÉES</p>
+                    <a href="#" class="bloc-link">
+                        <div class="choise">
+                            <div class="choix">
+                                <div class="text">
+                                    <h2>Tartare de poulpe acidulé</h2>
+                                    <p>Aux zestes d'orange</p>
+                                </div>
+                                <div class="prix">25€</div>
+                            </div>
+                    </a>
+                    <a href="#" class="bloc-link">
+                        <div class="choix2">
+                            <div class="text">
+                                <h2>Velouté de légumes d'antan</h2>
+                                <p>Carotte, panais, topinambour</p>
+                            </div>
+                            <div class="prix">35€</div>
+                        </div>
+                    </a>
+                    <a href="#" class="bloc-link">
+                        <div class="choix3">
+                            <div class="text">
+                                <h2>Soupe à l'oignon</h2>
+                                <p>Revisitée</p>
+                            </div>
+                            <div class="prix">20€</div>
+                        </div>
+                    </a>
+                </div>
+        </div>
         </section>
+
         <section>
-            <div class="entrees">
-                <p>ENTRÉES</p>
-                <a href="#"class="bloc-link">
+            <div class="plats">
+                <p>PLATS</p>
+                <a href="#" class="bloc-link">
                     <div class="choise">
                         <div class="choix">
-                            <h2>Tartare de poulpe acidulé</h2>
-                            <p>Aux zestes d'orange</p>
-                            <div class="prix">25€</div>
+                            <div class="text">
+                                <h2>Coquilles Saint-Jacques</h2>
+                                <p>Accompagnées d'une purée de panais</p>
+                            </div>
+                            <div class="prix">40€</div>
                         </div>
                 </a>
-                <a href="#"class="bloc-link">
+                <a href="#" class="bloc-link">
                     <div class="choix2">
-                        <h2>Velouté de légumes d'antan</h2>
-                        <p>Carotte, panais, topinambour</p>
+                        <div class="text">
+                            <h2>Magret de canard</h2>
+                            <p>Et parmentier de pommes de terre</p>
+                        </div>
                         <div class="prix">35€</div>
                     </div>
                 </a>
-                <a href="#"class="bloc-link">
+                <a href="#" class="bloc-link">
                     <div class="choix3">
-                        <h2>Soupe à l'oignon</h2>
-                        <p>Revisitée</p>
-                        <div class="prix">20€</div>
+                        <div class="text">
+                            <h2>Pigeonneau d’Ille-et-Vilaine</h2>
+                            <p>Sur son lit de gnocchis aux légumes</p>
+                        </div>
+                        <div class="prix">44€</div>
                     </div>
                 </a>
             </div>
@@ -64,56 +106,33 @@
     </section>
 
     <section>
-        <div class="plats">
-            <p>PLATS</p>
-            <a href="#"class="bloc-link">
-                <div class="choise">
-                    <div class="choix">
-                        <h2>Coquilles Saint-Jacques</h2>
-                        <p>Accompagnées d'une purée de panais</p>
-                        <div class="prix">40€</div>
-                    </div>
-            </a>
-            <a href="#"class="bloc-link">
-                <div class="choix2">
-                    <h2>Magret de canard</h2>
-                    <p>Et parmentier de pommes de terre</p>
-                    <div class="prix">35€</div>
-                </div>
-            </a>
-            <a href="#"class="bloc-link">
-                <div class="choix3">
-                    <h2>Pigeonneau d’Ille-et-Vilaine</h2>
-                    <p>Sur son lit de gnocchis aux légumes</p>
-                    <div class="prix">44€</div>
-                </div>
-            </a>
-        </div>
-        </div>
-    </section>
-
-    <section>
         <div class="desserts">
             <p>DESSERTS</p>
-            <a href="#"class="bloc-link">
+            <a href="#" class="bloc-link">
                 <div class="choise">
                     <div class="choix">
-                        <h2>Pétales de violettes glacés</h2>
-                        <p>Et purée de noisettes</p>
+                        <div class="text">
+                            <h2>Pétales de violettes glacés</h2>
+                            <p>Et purée de noisettes</p>
+                        </div>
                         <div class="prix">18€</div>
                     </div>
             </a>
-            <a href="#"class="bloc-link">
+            <a href="#" class="bloc-link">
                 <div class="choix2">
-                    <h2>Fondant au chocolat</h2>
-                    <p>Revisité</p>
+                    <div class="text">
+                        <h2>Fondant au chocolat</h2>
+                        <p>Revisité</p>
+                    </div>
                     <div class="prix">22€</div>
                 </div>
             </a>
-            <a href="#"class="bloc-link">
+            <a href="#" class="bloc-link">
                 <div class="choix3">
-                    <h2>Millefeuille croustillant</h2>
-                    <p>Myrtilles et pâte d’amande</p>
+                    <div class="text">
+                        <h2>Millefeuille croustillant</h2>
+                        <p>Myrtilles et pâte d’amande</p>
+                    </div>
                     <div class="prix">23€</div>
                 </div>
             </a>
@@ -143,4 +162,5 @@
         </a>
         </div>
     </footer>
+    </div>
 </body>
