--- a/note.html
+++ b/note.html
@@ -27,90 +27,91 @@
             <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="menilmontant">
         </div>
     </header>
-    <div class="grey">
-        <section>
-            <div class="title">
-                <h1>La note enchantée</h1>
-                <i class="far fa-heart"></i>
-            </div>
+    <div class="position">
+        <div class="grey">
+            <section>
+                <div class="title">
+                    <h1>La note enchantée</h1>
+                    <i class="far fa-heart"></i>
+                </div>
+            </section>
+            <section>
+                <div class="entrees">
+                    <p>ENTRÉES</p>
+                    <a href="#" class="bloc-link2">
+                        <div class="choise">
+                            <div class="choix">
+                                <div class="text">
+                                    <h2>Ravioles de foie gras</h2>
+                                    <p>Accompagnés de leur crème à la truffe</p>
+                                </div>
+                                <div class="prix">25€</div>
+                            </div>
+                    </a>
+                    <a href="#" class="bloc-link2">
+                        <div class="choix2">
+                            <div class="text">
+                                <h2>Caviar osciètre</h2>
+                                <p>Sur blini à la farine de blé noir</p>
+                            </div>
+                            <div class="prix">35€</div>
+                        </div>
+                    </a>
+                    <a href="#" class="bloc-link2">
+                        <div class="choix3">
+                            <div class="text">
+                                <h2>Homard et espuma de potiron</h2>
+                                <p>Mariné aux zestes d'orange</p>
+                            </div>
+                            <div class="prix">20€</div>
+                        </div>
+                    </a>
+                    <a href="#" class="bloc-link2">
+                        <div class="choix4">
+                            <div class="text">
+                                <h2>Foie gras de canard cuit entier</h2>
+                                <p>Confiture de figue et pain toasté</p>
+                            </div>
+                            <div class="prix">35€</div>
+                        </div>
+                    </a>
+                </div>
+        </div>
         </section>
+
         <section>
-            <div class="entrees">
-                <p>ENTRÉES</p>
-                <a href="#" class="bloc-link2">
+            <div class="plats">
+                <p>PLATS</p>
+                <a href="#" class="bloc-link">
                     <div class="choise">
                         <div class="choix">
-                            <figcaption>
-                                <h2>Ravioles de foie gras</h2>
-                                <p>Accompagnés de leur crème à la truffe</p>
-                            </figcaption>
-                            <div class="prix">25€</div>
+                            <div class="text">
+                                <h2>Noix de coquille Saint-Jacques</h2>
+                                <p>Sur lit de purée de céleri-rave</p>
+                            </div>
+                            <div class="prix">40€</div>
                         </div>
                 </a>
-                <a href="#" class="bloc-link2">
+                <a href="#" class="bloc-link">
                     <div class="choix2">
-                        <figcaption>
-                            <h2>Caviar osciètre</h2>
-                            <p>Sur blini à la farine de blé noir</p>
-                        </figcaption>
+                        <div class="text">
+                            <h2>Langoustine poêlée</h2>
+                            <p>Purée de patate douce</p>
+                        </div>
                         <div class="prix">35€</div>
                     </div>
                 </a>
-                <a href="#" class="bloc-link2">
+                <a href="#" class="bloc-link">
                     <div class="choix3">
-                        <figcaption>
-                            <h2>Homard et espuma de potiron</h2>
-                            <p>Mariné aux zestes d'orange</p>
-                        </figcaption>
-                        <div class="prix">20€</div>
-                    </div>
-                </a>
-                <a href="#" class="bloc-link2">
-                    <div class="choix4">
-                        <figcaption>
-                            <h2>Foie gras de canard cuit entier</h2>
-                            <p>Confiture de figue et pain toasté</p>
-                        </figcaption>
-                        <div class="prix">35€</div>
+                        <div class="text">
+                            <h2>Mijoté de queue de boeuf</h2>
+                            <p>Et riz sauvage aux zestes de citron</p>
+                        </div>
+                        <div class="prix">44€</div>
                     </div>
                 </a>
             </div>
     </div>
-    </section>
-
-    <section>
-        <div class="plats">
-            <p>PLATS</p>
-            <a href="#" class="bloc-link">
-                <div class="choise">
-                    <div class="choix">
-                        <figcaption>
-                            <h2>Noix de coquille Saint-Jacques</h2>
-                            <p>Sur lit de purée de céleri-rave</p>
-                        </figcaption>
-                        <div class="prix">40€</div>
-                    </div>
-            </a>
-            <a href="#" class="bloc-link">
-                <div class="choix2">
-                    <figcaption>
-                        <h2>Langoustine poêlée</h2>
-                        <p>Purée de patate douce</p>
-                    </figcaption>
-                    <div class="prix">35€</div>
-                </div>
-            </a>
-            <a href="#" class="bloc-link">
-                <div class="choix3">
-                    <figcaption>
-                        <h2>Mijoté de queue de boeuf</h2>
-                        <p>Et riz sauvage aux zestes de citron</p>
-                    </figcaption>
-                    <div class="prix">44€</div>
-                </div>
-            </a>
-        </div>
-        </div>
     </section>
 
     <section>
@@ -119,28 +120,28 @@
             <a href="#" class="bloc-link">
                 <div class="choise">
                     <div class="choix">
-                        <figcaption>
+                        <div class="text">
                             <h2>Macaron de noisette et chocolat</h2>
                             <p>Glace au caramel brun et sel de Guérande</p>
-                        </figcaption>
+                        </div>
                         <div class="prix">18€</div>
                     </div>
             </a>
             <a href="#" class="bloc-link">
                 <div class="choix2">
-                    <figcaption>
+                    <div class="text">
                         <h2>Baba au rhum revisité</h2>
                         <p>Avec son coulis de citron</p>
-                    </figcaption>
+                    </div>
                     <div class="prix">22€</div>
                 </div>
             </a>
             <a href="#" class="bloc-link">
                 <div class="choix3">
-                    <figcaption>
+                    <div class="text">
                         <h2>Tarte au citron meringuée</h2>
                         <p>Déstructurée</p>
-                    </figcaption>
+                    </div>
                     <div class="prix">23€</div>
                 </div>
             </a>
@@ -170,4 +171,5 @@
         </a>
         </div>
     </footer>
+    </div>
 </body>
