--- a/palette.html
+++ b/palette.html
@@ -27,36 +27,78 @@
             <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="menilmontant">
         </div>
     </header>
-    <div class="grey">
-        <section>
-            <div class="title">
-                <h1>La palette du goût</h1>
-                <i class="far fa-heart"></i>
-            </div>
+    <div class="position">
+        <div class="grey">
+            <section>
+                <div class="title">
+                    <h1>La palette du goût</h1>
+                    <i class="far fa-heart"></i>
+                </div>
+            </section>
+            <section>
+                <div class="entrees">
+                    <p>ENTRÉES</p>
+                    <a href="#" class="bloc-link">
+                        <div class="choise">
+                            <div class="choix">
+                                <div class="text">
+                                    <h2>Fricassée d'escargot</h2>
+                                    <p>Au piment d'espelette</p>
+                                </div>
+                                <div class="prix">25€</div>
+                            </div>
+                    </a>
+                    <a href="#" class="bloc-link">
+                        <div class="choix2">
+                            <div class="text">
+                                <h2>Foie gras de canard mi-cuit</h2>
+                                <p>Et ses copeaux de truffe noire</p>
+                            </div>
+                            <div class="prix">35€</div>
+                        </div>
+                    </a>
+                    <a href="#" class="bloc-link">
+                        <div class="choix3">
+                            <div class="text">
+                                <h2>Oeuf au plat</h2>
+                                <p>Assaisonné à la truffe sur lit de caviar</p>
+                            </div>
+                            <div class="prix">20€</div>
+                        </div>
+                    </a>
+                </div>
+        </div>
         </section>
+
         <section>
-            <div class="entrees">
-                <p>ENTRÉES</p>
-                <a href="#"class="bloc-link">
+            <div class="plats">
+                <p>PLATS</p>
+                <a href="#" class="bloc-link">
                     <div class="choise">
                         <div class="choix">
-                            <h2>Fricassée d'escargot</h2>
-                            <p>Au piment d'espelette</p>
-                            <div class="prix">25€</div>
+                            <div class="text">
+                                <h2>Filet de boeuf aux herbes</h2>
+                                <p>Accompagné de sa ribambelle de légumes</p>
+                            </div>
+                            <div class="prix">40€</div>
                         </div>
                 </a>
-                <a href="#"class="bloc-link">
+                <a href="#" class="bloc-link">
                     <div class="choix2">
-                        <h2>Foie gras de canard mi-cuit</h2>
-                        <p>Et ses copeaux de truffe noire</p>
+                        <div class="text">
+                            <h2>Parmentier de queue de boeuf</h2>
+                            <p>À la truffe noire sur sa purée de panais</p>
+                        </div>
                         <div class="prix">35€</div>
                     </div>
                 </a>
-                <a href="#"class="bloc-link">
+                <a href="#" class="bloc-link">
                     <div class="choix3">
-                        <h2>Oeuf au plat</h2>
-                        <p>Assaisonné à la truffe sur lit de caviar</p>
-                        <div class="prix">20€</div>
+                        <div class="text">
+                            <h2>Filet de turbot</h2>
+                            <p>Aux agrumes</p>
+                        </div>
+                        <div class="prix">44€</div>
                     </div>
                 </a>
             </div>
@@ -64,56 +106,33 @@
     </section>
 
     <section>
-        <div class="plats">
-            <p>PLATS</p>
-            <a href="#"class="bloc-link">
-                <div class="choise">
-                    <div class="choix">
-                        <h2>Filet de boeuf aux herbes</h2>
-                        <p>Accompagné de sa ribambelle de légumes</p>
-                        <div class="prix">40€</div>
-                    </div>
-            </a>
-            <a href="#"class="bloc-link">
-                <div class="choix2">
-                    <h2>Parmentier de queue de boeuf</h2>
-                    <p>À la truffe noire sur sa purée de panais</p>
-                    <div class="prix">35€</div>
-                </div>
-            </a>
-            <a href="#"class="bloc-link">
-                <div class="choix3">
-                    <h2>Filet de turbot</h2>
-                    <p>Aux agrumes</p>
-                    <div class="prix">44€</div>
-                </div>
-            </a>
-        </div>
-        </div>
-    </section>
-
-    <section>
         <div class="desserts">
             <p>DESSERTS</p>
-            <a href="#"class="bloc-link">
+            <a href="#" class="bloc-link">
                 <div class="choise">
                     <div class="choix">
-                        <h2>Paris-Brest</h2>
-                        <p>Revisité</p>
+                        <div class="text">
+                            <h2>Paris-Brest</h2>
+                            <p>Revisité</p>
+                        </div>
                         <div class="prix">18€</div>
                     </div>
             </a>
-            <a href="#"class="bloc-link">
+            <a href="#" class="bloc-link">
                 <div class="choix2">
-                    <h2>Macaron au chocolat d'exception</h2>
-                    <p>Et glace à la vanille de Madagascar</p>
+                    <div class="text">
+                        <h2>Macaron au chocolat d'exception</h2>
+                        <p>Et glace à la vanille de Madagascar</p>
+                    </div>
                     <div class="prix">22€</div>
                 </div>
             </a>
-            <a href="#"class="bloc-link">
+            <a href="#" class="bloc-link">
                 <div class="choix3">
-                    <h2>Mousse au chocolat</h2>
-                    <p>Au piment d'Espelette et à la truffe noire</p>
+                    <div class="text">
+                        <h2>Mousse au chocolat</h2>
+                        <p>Au piment d'Espelette et à la truffe noire</p>
+                    </div>
                     <div class="prix">23€</div>
                 </div>
             </a>
@@ -142,4 +161,5 @@
         </a>
         </div>
     </footer>
+    </div>
 </body>
