--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
                                 <h3>La palette du goût</h3>
                                 <p>Ménilmontant</p>
                             </a>
-                            <i class="far fa-heart"></i>
+                            <div class="heart">
+                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
+                            </div>
                         </figcaption>
                         <div class="new">Nouveau</div>
                     </figure>
@@ -85,7 +88,11 @@
                                 <h3>La note enchantée</h3>
                                 <p>Charonne</p>
                             </a>
-                            <i class="far fa-heart"></i>
+                            <div class="heart">
+                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
+                            </div>
+
                         </figcaption>
                         <div class="new">Nouveau</div>
                     </figure>
@@ -100,7 +107,10 @@
                                 <h3>A la française</h3>
                                 <p>Cité Rouge</p>
                             </a>
-                            <i class="far fa-heart"></i>
+                            <div class="heart">
+                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
+                            </div>
                         </figcaption>
                     </figure>
 
@@ -114,7 +124,10 @@
                                 <h3>Le délice des sens</h3>
                                 <p>Folie-Méricourt</p>
                             </a>
-                            <i class="far fa-heart"></i>
+                            <div class="heart">
+                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
+                            </div>
                         </figcaption>
                     </figure>
                 </div>
