--- a/note.html
+++ b/note.html
@@ -32,12 +32,17 @@
             <section>
                 <div class="title">
                     <h1>La note enchantée</h1>
-                    <i class="far fa-heart"></i>
+                    <div class="heart">
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
+                    </div>
                 </div>
             </section>
             <section>
                 <div class="entrees">
-                    <p>ENTRÉES</p>
+                    <p style="margin-bottom: 10px
+                    ;">ENTRÉES</p>
+                    <div class="line"></div>
                     <a href="#" class="bloc-link2">
                         <div class="choise">
                             <div class="choix">
@@ -47,6 +52,7 @@
                                 </div>
                                 <div class="prix">25€</div>
                             </div>
+                            <i class="fas fa-check-circle"></i>
                     </a>
                     <a href="#" class="bloc-link2">
                         <div class="choix2">
@@ -55,6 +61,9 @@
                                 <p>Sur blini à la farine de blé noir</p>
                             </div>
                             <div class="prix">35€</div>
+                        </div>
+                        <div class="valide">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </a>
                     <a href="#" class="bloc-link2">
@@ -65,6 +74,9 @@
                             </div>
                             <div class="prix">20€</div>
                         </div>
+                        <div class="valid">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </a>
                     <a href="#" class="bloc-link2">
                         <div class="choix4">
@@ -74,6 +86,9 @@
                             </div>
                             <div class="prix">35€</div>
                         </div>
+                        <div class="valide">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </a>
                 </div>
         </div>
@@ -81,7 +96,9 @@
 
         <section>
             <div class="plats">
-                <p>PLATS</p>
+                <p style="margin-bottom: 10px
+                ;">PLATS</p>
+                <div class="line"></div>
                 <a href="#" class="bloc-link">
                     <div class="choise">
                         <div class="choix">
@@ -90,6 +107,9 @@
                                 <p>Sur lit de purée de céleri-rave</p>
                             </div>
                             <div class="prix">40€</div>
+                        </div>
+                        <div class="valide">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                 </a>
                 <a href="#" class="bloc-link">
@@ -100,6 +120,9 @@
                         </div>
                         <div class="prix">35€</div>
                     </div>
+                    <div class="valide">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </a>
                 <a href="#" class="bloc-link">
                     <div class="choix3">
@@ -109,6 +132,9 @@
                         </div>
                         <div class="prix">44€</div>
                     </div>
+                    <div class="valid">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </a>
             </div>
     </div>
@@ -116,7 +142,9 @@
 
     <section>
         <div class="desserts">
-            <p>DESSERTS</p>
+            <p style="margin-bottom: 10px
+            ;">DESSERTS</p>
+            <div class="line"></div>
             <a href="#" class="bloc-link">
                 <div class="choise">
                     <div class="choix">
@@ -125,6 +153,9 @@
                             <p>Glace au caramel brun et sel de Guérande</p>
                         </div>
                         <div class="prix">18€</div>
+                    </div>
+                    <div class="valide">
+                        <i class="fas fa-check-circle"></i>
                     </div>
             </a>
             <a href="#" class="bloc-link">
@@ -135,6 +166,9 @@
                     </div>
                     <div class="prix">22€</div>
                 </div>
+                <div class="valide">
+                    <i class="fas fa-check-circle"></i>
+                </div>
             </a>
             <a href="#" class="bloc-link">
                 <div class="choix3">
@@ -143,6 +177,9 @@
                         <p>Déstructurée</p>
                     </div>
                     <div class="prix">23€</div>
+                </div>
+                <div class="valide">
+                    <i class="fas fa-check-circle"></i>
                 </div>
             </a>
         </div>
