--- a/delice.html
+++ b/delice.html
@@ -32,12 +32,17 @@
             <section>
                 <div class="title">
                     <h1>Le délice des sens</h1>
-                    <i class="far fa-heart"></i>
+                    <div class="heart">
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
+                    </div>
                 </div>
             </section>
             <section>
                 <div class="entrees">
-                    <p>ENTRÉES</p>
+                    <p style="margin-bottom: 10px
+                    ;">ENTRÉES</p>
+                    <div class="line"></div>
                     <a href="#" class="bloc-link">
                         <div class="choise">
                             <div class="choix">
@@ -46,6 +51,9 @@
                                     <p>Assaisonné au yuzu</p>
                                 </div>
                                 <div class="prix">25€</div>
+                            </div>
+                            <div class="valide">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                     </a>
                     <a href="#" class="bloc-link">
@@ -56,6 +64,9 @@
                             </div>
                             <div class="prix">35€</div>
                         </div>
+                        <div class="valide">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </a>
                     <a href="#" class="bloc-link">
                         <div class="choix3">
@@ -65,6 +76,9 @@
                             </div>
                             <div class="prix">20€</div>
                         </div>
+                        <div class="valide">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </a>
                 </div>
         </div>
@@ -72,7 +86,9 @@
 
         <section>
             <div class="plats">
-                <p>PLATS</p>
+                <p style="margin-bottom: 10px
+                ;">PLATS</p>
+                <div class="line"></div>
                 <a href="#" class="bloc-link">
                     <div class="choise">
                         <div class="choix">
@@ -81,6 +97,9 @@
                                 <p>Et sa crème de truffe</p>
                             </div>
                             <div class="prix">40€</div>
+                        </div>
+                        <div class="valide">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                 </a>
                 <a href="#" class="bloc-link">
@@ -91,6 +110,9 @@
                         </div>
                         <div class="prix">35€</div>
                     </div>
+                    <div class="valide">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </a>
                 <a href="#" class="bloc-link">
                     <div class="choix3">
@@ -100,6 +122,9 @@
                         </div>
                         <div class="prix">44€</div>
                     </div>
+                    <div class="valide">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </a>
             </div>
     </div>
@@ -107,7 +132,9 @@
 
     <section>
         <div class="desserts">
-            <p>DESSERTS</p>
+            <p style="margin-bottom: 10px
+            ;">DESSERTS</p>
+            <div class="line"></div>
             <a href="#" class="bloc-link">
                 <div class="choise">
                     <div class="choix">
@@ -116,6 +143,9 @@
                             <p>Du chef</p>
                         </div>
                         <div class="prix">18€</div>
+                    </div>
+                    <div class="valide">
+                        <i class="fas fa-check-circle"></i>
                     </div>
             </a>
             <a href="#" class="bloc-link">
@@ -126,6 +156,9 @@
                     </div>
                     <div class="prix">22€</div>
                 </div>
+                <div class="valide">
+                    <i class="fas fa-check-circle"></i>
+                </div>
             </a>
             <a href="#" class="bloc-link">
                 <div class="choix3">
@@ -134,6 +167,9 @@
                         <p>À la noisette</p>
                     </div>
                     <div class="prix">23€</div>
+                </div>
+                <div class="valide">
+                    <i class="fas fa-check-circle"></i>
                 </div>
             </a>
         </div>
