--- a/palette.html
+++ b/palette.html
@@ -32,12 +32,17 @@
             <section>
                 <div class="title">
                     <h1>La palette du goût</h1>
-                    <i class="far fa-heart"></i>
+                    <div class="heart">
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
+                    </div>
                 </div>
             </section>
             <section>
                 <div class="entrees">
-                    <p>ENTRÉES</p>
+                    <p style="margin-bottom: 10px
+                    ;">ENTRÉES</p>
+                    <div class="line"></div>
                     <a href="#" class="bloc-link">
                         <div class="choise">
                             <div class="choix">
@@ -47,6 +52,7 @@
                                 </div>
                                 <div class="prix">25€</div>
                             </div>
+                            <i class="fas fa-check-circle"></i>
                     </a>
                     <a href="#" class="bloc-link">
                         <div class="choix2">
@@ -55,6 +61,9 @@
                                 <p>Et ses copeaux de truffe noire</p>
                             </div>
                             <div class="prix">35€</div>
+                        </div>
+                        <div class="valide">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </a>
                     <a href="#" class="bloc-link">
@@ -65,6 +74,9 @@
                             </div>
                             <div class="prix">20€</div>
                         </div>
+                        <div class="valide">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </a>
                 </div>
         </div>
@@ -72,7 +84,9 @@
 
         <section>
             <div class="plats">
-                <p>PLATS</p>
+                <p style="margin-bottom: 10px
+                ;">PLATS</p>
+                <div class="line"></div>
                 <a href="#" class="bloc-link">
                     <div class="choise">
                         <div class="choix">
@@ -81,6 +95,9 @@
                                 <p>Accompagné de sa ribambelle de légumes</p>
                             </div>
                             <div class="prix">40€</div>
+                        </div>
+                        <div class="valide">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                 </a>
                 <a href="#" class="bloc-link">
@@ -91,6 +108,9 @@
                         </div>
                         <div class="prix">35€</div>
                     </div>
+                    <div class="valide">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </a>
                 <a href="#" class="bloc-link">
                     <div class="choix3">
@@ -100,6 +120,9 @@
                         </div>
                         <div class="prix">44€</div>
                     </div>
+                    <div class="valide">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </a>
             </div>
     </div>
@@ -107,7 +130,8 @@
 
     <section>
         <div class="desserts">
-            <p>DESSERTS</p>
+            <p style="margin-bottom: 10px;">DESSERTS</p>
+            <div class="line"></div>
             <a href="#" class="bloc-link">
                 <div class="choise">
                     <div class="choix">
@@ -116,6 +140,9 @@
                             <p>Revisité</p>
                         </div>
                         <div class="prix">18€</div>
+                    </div>
+                    <div class="valide">
+                        <i class="fas fa-check-circle"></i>
                     </div>
             </a>
             <a href="#" class="bloc-link">
@@ -126,6 +153,9 @@
                     </div>
                     <div class="prix">22€</div>
                 </div>
+                <div class="valide">
+                    <i class="fas fa-check-circle"></i>
+                </div>
             </a>
             <a href="#" class="bloc-link">
                 <div class="choix3">
@@ -134,6 +164,9 @@
                         <p>Au piment d'Espelette et à la truffe noire</p>
                     </div>
                     <div class="prix">23€</div>
+                </div>
+                <div class="valide">
+                    <i class="fas fa-check-circle"></i>
                 </div>
             </a>
         </div>
